Added lecture 2 notes for ooad

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 						<li class="list-group-item">
 						Section 3 <span class="badge badge-pill badge-warning">In Progress</span>
 						<ul class="list-group">
-							<li class="list-group-item">Lecture Notes <span class="badge badge-pill badge-warning">In Progress</span></li>
+							<li class="list-group-item">Lecture Notes <span class="badge badge-pill badge-success">Completed</span></li>
 							<li class="list-group-item">Quiz<span class="badge badge-pill badge-warning">In Progress</span></li>
 						</ul>
 						</li>
 					</ul>
 				</li>
 				<li class="list-group-item">
-					Object Oriented Design and Analysis
+					Object Oriented Analysis and Design
 					<ul class="list-group">
 						<li class="list-group-item">
 						Section 1 <span class="badge badge-pill badge-warning">In Progress</span>
