--- a/ooad/section1/lecture_notes.html
+++ b/ooad/section1/lecture_notes.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>OOAD - Section 1 Lecture Notes</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel="stylesheet" href="../../css/ooadSection1LectureStyle.css">
+		<link rel="stylesheet" href="../../css/OOADSection1LectureStyle.css">
 	</head>
 	<body>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -12,13 +12,13 @@
 
 		<div class="container">
 			<h1>Object Oriented Analysis and Design</h1>
-			<h4>Section 1: Overview of the Module and of UML2</h4>
+			<h4>Section 1: Overview of OOAD and UML</h4>
 			<h4 style="text-align: center;">Lecture Notes</h4>
 
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
-					<li class="breadcrumb-item"><a href="../index.html">Object Oriented Anaylsis and Design</a></li>
+					<li class="breadcrumb-item"><a href="../index.html">Object Oriented Analysis and Design</a></li>
 					<li class="breadcrumb-item"><a href="index.html">Section 1</a></li>
 					<li class="breadcrumb-item active" aria-current="page">Lecture Notes</li>
 				</ol>
@@ -26,36 +26,29 @@
 
 			<div class="row">
 				<div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-					<h4 id="section_"></h4>
-					<h4 id="section_"></h4>
-					<h4 id="section_"></h4>
-					<h4 id="section_"></h4>
-					<h4 id="section_"></h4>
-					<h4 id="section_"></h4>
-					<h4 id="section_"></h4>
-					<h4 id="section_"></h4>
-					<h4 id="section_"></h4>
-					<h4 id="section_"></h4>
-					<h4 id="section_"></h4>
+					<h4 id="section"></h4>
+					<h4 id="section"></h4>
+					<h4 id="section"></h4>
+					<h4 id="section"></h4>
+					<h4 id="section"></h4>
+					<h4 id="section"></h4>
+					<h4 id="section"></h4>
+					<h4 id="section"></h4>
+					<h4 id="section"></h4>
+					<h4 id="section"></h4>
 				</div>
 				<div class="col-xl-3 col-lg-3 col-md-3 hidden-xs hidden-sm">
 					<div class="list-group">
-						<a href="#section_" class="list-group-item list-group-item-action"></a>
-						<a href="#section_" class="list-group-item list-group-item-action"></a>
-						<a href="#section_" class="list-group-item list-group-item-action"></a>
-						<a href="#section_" class="list-group-item list-group-item-action"></a>
-						<a href="#section_" class="list-group-item list-group-item-action"></a>
-						<a href="#section_" class="list-group-item list-group-item-action"></a>
-						<a href="#section_" class="list-group-item list-group-item-action"></a>
-						<a href="#section_" class="list-group-item list-group-item-action"></a>
-						<a href="#section_" class="list-group-item list-group-item-action"></a>
-						<a href="#section_" class="list-group-item list-group-item-action"></a>
-						<a href="#section_" class="list-group-item list-group-item-action"></a>
-						<a href="#section_" class="list-group-item list-group-item-action"></a>
-						<a href="#section_" class="list-group-item list-group-item-action"></a>
-						<a href="#section_" class="list-group-item list-group-item-action"></a>
-						<a href="#section_" class="list-group-item list-group-item-action"></a>
-						<a href="#section_" class="list-group-item list-group-item-action"></a>
+						<a href="#section" class="list-group-item list-group-item-action"></a>
+						<a href="#section" class="list-group-item list-group-item-action"></a>
+						<a href="#section" class="list-group-item list-group-item-action"></a>
+						<a href="#section" class="list-group-item list-group-item-action"></a>
+						<a href="#section" class="list-group-item list-group-item-action"></a>
+						<a href="#section" class="list-group-item list-group-item-action"></a>
+						<a href="#section" class="list-group-item list-group-item-action"></a>
+						<a href="#section" class="list-group-item list-group-item-action"></a>
+						<a href="#section" class="list-group-item list-group-item-action"></a>
+						<a href="#section" class="list-group-item list-group-item-action"></a>
 					</div>
 				</div>
 			</div>
