--- a/ooad/section2/index.html
+++ b/ooad/section2/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>OOAD - Section 2: OOAD Analysis Overview and UML Packages</title>
+		<title>OOAD - Section 1: Overview of OOAD and UML</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel="stylesheet" href="../../css/ooadSection2IndexStyle.css">
+		<link rel="stylesheet" href="../../css/OOADSection1IndexStyle.css">
 	</head>
 	<body>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -12,13 +12,13 @@
 
 		<div class="container">
 			<h1>Object Oriented Analysis and Design</h1>
-			<h4>Section 2: OOAD Analysis Overview and UML Packages</h4>
+			<h4>Section 1: Overview of OOAD and UML</h4>
 			
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
 					<li class="breadcrumb-item"><a href="../index.html">Object Oriented Analysis and Design</a></li>
-					<li class="breadcrumb-item active" aria-current="page">Section 2</li>
+					<li class="breadcrumb-item active" aria-current="page">Section 1</li>
 				</ol>
 			</nav>
 
