--- a/ooad/section3/index.html
+++ b/ooad/section3/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Object Oriented Analysis and Design</title>
+		<title>OOAD - Section 3: Object-Oriented Design (Part 2)</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel="stylesheet" href="../css/ooadIndexStyle.css">
+		<link rel="stylesheet" href="../../css/OOADSection1IndexStyle.css">
 	</head>
 	<body>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -12,18 +12,19 @@
 
 		<div class="container">
 			<h1>Object Oriented Analysis and Design</h1>
-
+			<h4>Section 3: Object-Oriented Design (Part 2)</h4>
+			
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-					<li class="breadcrumb-item active" aria-current="page">Object Oriented Analysis and Design</li>
+					<li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
+					<li class="breadcrumb-item"><a href="../index.html">Object Oriented Analysis and Design</a></li>
+					<li class="breadcrumb-item active" aria-current="page">Section 3</li>
 				</ol>
 			</nav>
 
-			<div class="list-group" id="topic_list">
-				<a href="section1/index.html" class="list-group-item list-group-item-action">Section 1: Overview of the Module and of UML2</a>
-				<a href="section2/index.html" class="list-group-item list-group-item-action">Section 2: OOAD Analysis Overview and UML Packages</a>
-				<a href="section3/index.html" class="list-group-item list-group-item-action">Section 3: Object-Oriented Design (Part 2)</a>
+			<div class="list-group" id="resources_list">
+				<a href="lecture_notes.html" class="list-group-item list-group-item-action">Lecture Notes</a>
+				<a href="quiz.html" class="list-group-item list-group-item-action">Quiz</a>
 			</div>
 		</div>
 
