--- a/ooad/section3/lecture_notes.html
+++ b/ooad/section3/lecture_notes.html
@@ -55,30 +55,30 @@
 				<div class="col-xl-3 col-lg-3 col-md-3 hidden-xs hidden-sm">
 					<div class="list-group">
 						<a href="#section1" class="list-group-item list-group-item-action">UML Class Notation</a>
-						<a href="#section2" class="list-group-item list-group-item-action"></a>
-						<a href="#section3" class="list-group-item list-group-item-action"></a>
-						<a href="#section4" class="list-group-item list-group-item-action"></a>
-						<a href="#section5" class="list-group-item list-group-item-action"></a>
-						<a href="#section6" class="list-group-item list-group-item-action"></a>
-						<a href="#section7" class="list-group-item list-group-item-action"></a>
-						<a href="#section8" class="list-group-item list-group-item-action"></a>
-						<a href="#section9" class="list-group-item list-group-item-action"></a>
-						<a href="#section10" class="list-group-item list-group-item-action"></a>
-						<a href="#section11" class="list-group-item list-group-item-action"></a>
-						<a href="#section12" class="list-group-item list-group-item-action"></a>
-						<a href="#section13" class="list-group-item list-group-item-action"></a>
-						<a href="#section14" class="list-group-item list-group-item-action"></a>
-						<a href="#section15" class="list-group-item list-group-item-action"></a>
-						<a href="#section16" class="list-group-item list-group-item-action"></a>
-						<a href="#section17" class="list-group-item list-group-item-action"></a>
-						<a href="#section18" class="list-group-item list-group-item-action"></a>
-						<a href="#section19" class="list-group-item list-group-item-action"></a>
-						<a href="#section20" class="list-group-item list-group-item-action"></a>
-						<a href="#section21" class="list-group-item list-group-item-action"></a>
-						<a href="#section22" class="list-group-item list-group-item-action"></a>
-						<a href="#section23" class="list-group-item list-group-item-action"></a>
-						<a href="#section24" class="list-group-item list-group-item-action"></a>
-						<a href="#section25" class="list-group-item list-group-item-action"></a>
+						<a href="#section2" class="list-group-item list-group-item-action">Attribute Compartment</a>
+						<a href="#section3" class="list-group-item list-group-item-action">Visibility</a>
+						<a href="#section4" class="list-group-item list-group-item-action">Multiplicity</a>
+						<a href="#section5" class="list-group-item list-group-item-action">Operation Compartment</a>
+						<a href="#section6" class="list-group-item list-group-item-action">Scope</a>
+						<a href="#section7" class="list-group-item list-group-item-action">Object Construction</a>
+						<a href="#section8" class="list-group-item list-group-item-action">Modelling Class Methods</a>
+						<a href="#section9" class="list-group-item list-group-item-action">Design - Refining Analysis Relationships</a>
+						<a href="#section10" class="list-group-item list-group-item-action">Design Relationships</a>
+						<a href="#section11" class="list-group-item list-group-item-action">Aggregation and Composition</a>
+						<a href="#section12" class="list-group-item list-group-item-action">1 to 1 and Many to 1 Associations</a>
+						<a href="#section13" class="list-group-item list-group-item-action">1 to Many Associations</a>
+						<a href="#section14" class="list-group-item list-group-item-action">Many to Many Associations</a>
+						<a href="#section15" class="list-group-item list-group-item-action">Bi-directional Associations</a>
+						<a href="#section16" class="list-group-item list-group-item-action">Association Classes</a>
+						<a href="#section17" class="list-group-item list-group-item-action">Generic GUI Model</a>
+						<a href="#section18" class="list-group-item list-group-item-action">Classes and Interfaces</a>
+						<a href="#section19" class="list-group-item list-group-item-action">Summary</a>
+						<a href="#section20" class="list-group-item list-group-item-action">Design - Use Case Realisation</a>
+						<a href="#section21" class="list-group-item list-group-item-action">Interaction Diagrams in Design</a>
+						<a href="#section22" class="list-group-item list-group-item-action">Concurrency Modelling</a>
+						<a href="#section23" class="list-group-item list-group-item-action">Subsystem Interactions</a>
+						<a href="#section24" class="list-group-item list-group-item-action">Timing Diagrams</a>
+						<a href="#section25" class="list-group-item list-group-item-action">Summary</a>
 					</div>
 				</div>
 			</div>
